[workspace]
members = ["crates/*"]
exclude = ["examples"]

# Opt-in to the new feature resolver introduced in Rust 1.51 and Edition 2021.
# https://doc.rust-lang.org/cargo/reference/resolver.html#resolver-versions
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

description = "A framework and runner for end-to-end tests for web applications"
homepage = "https://github.com/otterbuild/doco"
repository = "https://github.com/otterbuild/doco.git"
readme = "README.md"

[workspace.metadata.bin]
leptosfmt = { version = "0.1.30" }
