[package]
name = "doco-derive"

version.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
inventory = "0.3.15"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }
tokio = { version = "1.40.0", features = ["rt"] }
