[package]
name = "axum-postgres"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
sqlx = { version = "0.8.1", features = [
  "runtime-tokio-rustls",
  "any",
  "postgres",
] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
